temp!: mid adding gemini feature with context

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@google/generative-ai": "^0.24.0",
     "@mui/material": "^5.11.11",
     "gas-client": "^1.2.0",
     "prop-types": "^15.8.1",
@@ -53,7 +54,7 @@
     "@google/clasp": "^2.4.2",
     "@types/expect-puppeteer": "^5.0.0",
     "@types/jest-environment-puppeteer": "^5.0.2",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.17.28",
     "@types/puppeteer": "^5.4.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -80,7 +81,7 @@
     "postcss": "^8.4.38",
     "postcss-preset-env": "^9.5.4",
     "prettier": "^2.7.0",
-    "puppeteer": "^14.3.0",
+    "puppeteer": "^24.4.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "rollup": "^4.18.0",
